[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "elastic_enterprise_search"
dist-name = "elastic-enterprise-search"
author = "Elastic"
author-email = "support@elastic.co"
maintainer = "Seth Michael Larson"
maintainer-email = "seth.larson@elastic.co"
home-page = "https://github.com/elastic/enterprise-search-python"
description-file = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires = [
  "requests",
  "PyJWT",
  "six",
  "python-dateutil",
]
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"

[tool.flit.metadata.requires-extra]
develop = [
  "pytest",
  "pytest-cov",
]

[tool.flit.metadata.urls]
"Source Code" = "https://github.com/elastic/enterprise-search-python"
"Issue Tracker" = "https://github.com/elastic/enterprise-search-python/issues"
